--- a/themes/liva-hugo/exampleSite/config.toml
+++ b/themes/liva-hugo/exampleSite/config.toml
@@ -131,8 +131,8 @@ icon = "ti-twitter-alt" # themify icon : https://themify.me/themify-icons
 link = "#"
 
 [[params.social]]
-title = "instagram"
-icon = "ti-instagram" # themify icon : https://themify.me/themify-icons
+title = "tumblr"
+icon = "ti-tumblr" # themify icon : https://themify.me/themify-icons
 link = "#"
 
 [[params.social]]
