--- a/config.toml
+++ b/config.toml
@@ -57,10 +57,10 @@ pygmentsStyle = "tango"
   URL = "blog"
   weight = 2
   
-  [[menu.main]]
-  name = "Contact"
-  URL = "contact"
-  weight = 4
+  #[[menu.main]]
+  #name = "Contact"
+  #URL = "contact"
+  #weight = 4
 
   # footer menu
   [[menu.footer]]
@@ -73,10 +73,10 @@ pygmentsStyle = "tango"
   URL = "blog"
   weight = 3
   
-  [[menu.footer]]
-  name = "Contact"
-  URL = "contact"
-  weight = 4
+  #[[menu.footer]]
+  #name = "Contact"
+  #URL = "contact"
+  #weight = 4
 
 
 #################### default parameters ################################
