Added portfolio link to footer menu

--- a/config.toml
+++ b/config.toml
@@ -139,3 +139,8 @@ title = "tumblr"
 icon = "ti-tumblr" # themify icon : https://themify.me/themify-icons
 link = "#"
 
+[[params.social]]
+title = "portfolio"
+icon = "ti-folder" # themify icon : https://themify.me/themify-icons
+link = "https://nancychelaru.rbind.io"
+
