--- a/config.toml
+++ b/config.toml
@@ -57,10 +57,10 @@ pygmentsStyle = "tango"
   URL = "blog"
   weight = 2
   
-  #[[menu.main]]
-  #name = "Contact"
-  #URL = "contact"
-  #weight = 4
+  [[menu.main]]
+  name = "Contact"
+  URL = "contact"
+  weight = 4
 
   # footer menu
   [[menu.footer]]
