--- a/config.toml
+++ b/config.toml
@@ -74,7 +74,7 @@ pygmentsStyle = "tango"
   weight = 3
   
   #[[menu.footer]]
-  #name = "Contact"
+  #name = "Contact Us"
   #URL = "contact"
   #weight = 4
 
